<resources>
    <string name="app_name" translatable="false">Secret Santa</string>
    <string name="app_id" translatable="false">989230937902245</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>

    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Secret Santa now!</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered. Login Me!</string>
    <string name="hint_repeat_password">Repeat Password</string>

    <string name="verification_email_sent">Verification email was sent</string>
    <string name="error">Smth went wrong!</string>
    <string name="different_passwords">Passwords don\'t match</string>
    <string name="wrong_password_format">Password must have at least 8 symbols long and have at least one great letter</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="verification">Pls verify your email %s!</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="email_cant_be_empty">Email can\'t be empty!</string>

    <string name="sent_to_email">Verification email was sent to %s</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="created_by_duckonmoon">Created by duckonmoon</string>

    <string name="merry_christmas_and_happy_new_year">We wish you a Merry Christmas and a Happy New Year!</string>
    <string name="members">Members</string>
    <string name="group_name">Group Title</string>
    <string name="member_image">member image</string>
    <string name="add_new_member">+ Add new member</string>
    <string name="Done">done</string>
    <string name="nickname">Nickname</string>
    <string name="friend_s_nickname">Friend\'s nickname</string>
    <string name="add">Add</string>
    <string name="members_count_and_date_created">Members : %d\nCreated :\n %s</string>
    <string name="members_count">Members : %d</string>
    <string name="my_groups">My Groups</string>
    <string name="group_requests">Group Requests</string>

    <string name="confirm">Confirm</string>
    <string name="cancel_confirmation">Cancel\nConfirmation</string>
    <string name="group_image">Group Image</string>
    <string name="randomize">Randomize</string>

    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="sent_instructions">Restore instructions was sent to your email!</string>
    <string name="ur_nickname_is">Nickname : %s</string>
    <string name="admin">admin</string>
    <string name="present">present</string>
    <string name="accept_invitation">accept invitation</string>
    <string name="restore_group">restore group</string>
    <string name="cancel_invitation">cancel invitation</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="my_wishlist">My WishList</string>
    <string name="rerandom">Do You want to rerun randomize?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="wish_string">• %s</string>
    <string name="input_what_you_want_for_christmas">Input what you want for Christmas</string>
    <string name="accept_leave">Do you want to leave this page with unsaved changes?</string>
    <string name="his_wishlist">%s\'s WishList</string>
    <string name="trash">Trash</string>
    <string name="confirm_move_group_to_trash">Move %s to trash?</string>
    <string name="quite_alone_here">quite alone here</string>
    <string name="profile">Profile</string>

    <string name="picture_christmas_house">picture_christmas_house</string>
    <string name="santaa">santaa</string>
    <string name="candy_round">candy_round</string>
    <string name="face">face</string>
    <string name="delete_group">Do you want to delete %s?</string>
    <string name="new_groups_available">new group invitation appeared!</string>
    <string name="invitation_accepted">Invitation to %s accepted successfully</string>
    <string name="group_restored">Group %s restored successfully</string>

    <string name="group_created_successfully">Group was created successfully!</string>
    <string name="group_moved_trash">%s was moved to Trash</string>
    <string name="group_completely_deleted">%s was completely deleted!!!</string>
    <string name="member_already_added">Member already added</string>
    <string name="member_added">%s added</string>
    <string name="check_nick_correct">Pls check if nick is correct</string>
    <string name="push_people_with_empty_wishlists">Push people with empty wishlists</string>
</resources>
