<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/verification_email_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/christmas_image"
        android:visibility="visible">

        <TextView
            android:id="@+id/verify_email_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_with_rounded_angles_red"

            app:layout_constraintBottom_toTopOf="@+id/santa_on_sledge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />


        <ImageView
            android:id="@+id/santa_on_sledge"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/rectangle_with_rounded_angles_almost_green"
            android:src="@drawable/santa_on_sledge"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_email_text"/>


    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:background="@drawable/christmas_image">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="@dimen/top_margin"
            android:layout_marginStart="@dimen/top_margin"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:src="@drawable/santaa"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_with_rounded_angles_almost_green"
                android:orientation="vertical">

                <!--android:background="#40ffffff"-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/mainAppColorDarker"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/mainAppColorDarker"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:background="@drawable/rectangle_with_rounded_angles_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/btn_login"
                 />

            <ProgressBar
                android:id="@+id/spinner"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/rectangle_with_rounded_angles_almost_green"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/mainAppColorDarker"
                android:textStyle="bold" />




                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/rectangle_with_rounded_angles_red"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


        </LinearLayout>
    </FrameLayout>
</LinearLayout>